--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@ img.emoji {
   <script src="firestore-setup.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-tilelayer-wmts@1.0.2/leaflet-tilelayer-wmts.js"></script>
+  <script src="leaflet-tilelayer-wmts.js"></script>
 
   <script>
     const DEFAULT_ROUTE_COLOR = '#00ccff';
