--- a/index.html
+++ b/index.html
@@ -2828,13 +2828,13 @@ function emojiHtml(str) {
       // WMTS GetCapabilities: https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMTS/StandardResolution?Service=WMTS&Request=GetCapabilities
       const WMTS_STD_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMTS/StandardResolution';
       const WMTS_HI_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMTS/HighResolution';
-      const WMTS_SHADED_RELIEF_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/NMT/GRID1/WMTS/ShadedRelief';
       // WMS GetCapabilities: https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/StandardResolution?service=WMS&request=GetCapabilities&version=1.3.0
       const WMS_STD_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/StandardResolution';
       const WMS_HI_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/HighResolution';
       const WMS_TRUE_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/TrueOrtho';
       const WMS_ARCH_STD_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/StandardResolutionTime';
       const WMS_ARCH_HI_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/ORTO/WMS/HighResolutionTime';
+      const WMS_SHADED_RELIEF_URL = 'https://mapy.geoportal.gov.pl/wss/service/PZGIK/NMT/GRID1/WMS/ShadedRelief';
       const WMS_STD_TIME_URL = WMS_ARCH_STD_URL;
       const WMS_HI_TIME_URL = WMS_ARCH_HI_URL;
 
@@ -2849,18 +2849,7 @@ function emojiHtml(str) {
         });
       }
 
-      function shadedReliefLayer() {
-        if (!L.tileLayer.wmts) throw new Error('Brak wtyczki WMTS');
-        return L.tileLayer.wmts(WMTS_SHADED_RELIEF_URL, {
-          layer: 'Relief',
-          tilematrixSet: 'EPSG:3857',
-          format: 'image/png',
-          style: 'default',
-          attribution: SHADED_RELIEF_ATTR
-        });
-      }
-
-      function wmsLayer(url, layerName = 'Raster') {
+      function wmsLayer(url, layerName = 'Raster', options = {}) {
         return L.tileLayer.wms(url, {
           layers: layerName,
           format: 'image/jpeg',
@@ -2868,7 +2857,15 @@ function emojiHtml(str) {
           version: '1.3.0',
           uppercase: true,
           crs: L.CRS.EPSG3857,
-          attribution: ORTO_ATTR
+          attribution: ORTO_ATTR,
+          ...options
+        });
+      }
+
+      function wmsShadedReliefLayer() {
+        return wmsLayer(WMS_SHADED_RELIEF_URL, 'Raster', {
+          format: 'image/png',
+          attribution: SHADED_RELIEF_ATTR
         });
       }
 
@@ -2905,7 +2902,7 @@ function emojiHtml(str) {
       const sat = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
         attribution: 'Esri'
       });
-      const hill = shadedReliefLayer();
+      const hill = wmsShadedReliefLayer();
       const osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; OpenStreetMap contributors'
       });
@@ -2943,11 +2940,11 @@ function emojiHtml(str) {
       const overlays = {
         archStd: wmsLayer(WMS_ARCH_STD_URL),
         archHi: wmsLayer(WMS_ARCH_HI_URL),
-        shade: shadedReliefLayer()
+        shade: wmsShadedReliefLayer()
       };
       overlays.archStd.on('tileerror', () => showToast('Sprawdź parametry warstwy (layers/CRS/format).'));
       overlays.archHi.on('tileerror', () => showToast('Sprawdź parametry warstwy (layers/CRS/format).'));
-      overlays.shade.on('tileerror', () => showToast('Nie udało się załadować cieniowania (Geoportal).'));
+      overlays.shade.on('tileerror', () => showToast('Nie udało się załadować cieniowania (Geoportal WMS).'));
 
       const mapDateBadgeEl = document.getElementById('map-date-badge');
       const mapYearSelect = document.getElementById('map-year-select');
