--- a/index.html
+++ b/index.html
@@ -5000,14 +5000,56 @@ function showRoutePopup(pinId, tr, latlng) {
       if (!input) return;
 
       function executeSearch(q) {
-        const m = q.match(/^(-?\d+(?:\.\d+)?)[ ,]+(-?\d+(?:\.\d+)?)/);
-        if (m) {
-          const lat = parseFloat(m[1]);
-          const lng = parseFloat(m[2]);
+        const coords = parseCoordinateInput(q);
+        if (coords) {
+          const [lat, lng] = coords;
           map.setView([lat, lng], 16);
           showSearchMarker(lat, lng, q);
           return;
         }
+
+        const plusCodeMatch = q.match(/[A-Z0-9]{4,}\+[A-Z0-9]{2,}/i);
+        if (plusCodeMatch) {
+          fetch(`https://plus.codes/api?address=${encodeURIComponent(q)}`)
+            .then(r => r.json())
+            .then(data => {
+              const location = data && data.geometry && data.geometry.location;
+              if (location && Number.isFinite(location.lat) && Number.isFinite(location.lng)) {
+                const label = (data.plus_code && (data.plus_code.compound_code || data.plus_code.global_code)) || q;
+                map.setView([location.lat, location.lng], 16);
+                showSearchMarker(location.lat, location.lng, label);
+                return true;
+              }
+              return false;
+            })
+            .then(found => {
+              if (!found) {
+                return fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(q)}`);
+              }
+              return null;
+            })
+            .then(resp => {
+              if (!resp) return null;
+              return resp.json();
+            })
+            .then(data => {
+              if (!data) return;
+              if (data && data[0]) {
+                const lat = parseFloat(data[0].lat);
+                const lng = parseFloat(data[0].lon);
+                map.setView([lat, lng], 16);
+                showSearchMarker(lat, lng, data[0].display_name);
+              } else {
+                alert('Nie znaleziono adresu');
+              }
+            })
+            .catch(err => {
+              console.error('Geocoding error', err);
+              alert('Błąd geokodowania');
+            });
+          return;
+        }
+
         fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(q)}`)
           .then(r => r.json())
           .then(data => {
@@ -5084,10 +5126,10 @@ function showRoutePopup(pinId, tr, latlng) {
 
     function parseCoordinateInput(value) {
       if (!value) return null;
-      const match = value.match(/^\s*(-?\d+(?:\.\d+)?)\s*[,;]\s*(-?\d+(?:\.\d+)?)\s*$/);
+      const match = value.match(/^\s*(-?\d+(?:[.,]\d+)?)\s*[,;\s]+\s*(-?\d+(?:[.,]\d+)?)\s*$/);
       if (!match) return null;
-      const lat = parseFloat(match[1]);
-      const lon = parseFloat(match[2]);
+      const lat = parseFloat(match[1].replace(',', '.'));
+      const lon = parseFloat(match[2].replace(',', '.'));
       if (Number.isNaN(lat) || Number.isNaN(lon)) return null;
       return [lat, lon];
     }
