--- a/index.html
+++ b/index.html
@@ -785,8 +785,8 @@ body, #sidebar, #basemap-switcher {
   #sidebar.show { transform: translateX(0); }
   #basemap-switcher { position: fixed; top: 0; right: 0; transform: translateX(100%); transition: transform 0.3s ease; height: 100%; z-index: 1500; }
   #basemap-switcher.show { transform: translateX(0); }
-  #narzedzia { left: 10px; top: 120px; }
-  #geosearch-container { left: 10px; right: 10px; top: 70px; }
+  #narzedzia { left: 10px; top: 104px; z-index: 900; }
+  #geosearch-container { left: 10px; right: 10px; top: 52px; z-index: 900; }
   #gpsFollowBtn {
     position: fixed;
     bottom: 20px;
